# artifacts/api-server/src/routes/contratti.ts
@@ -21,12 +21,14 @@ const withJoin = () =>
       id: contrattiTable.id,
       vetturaId: contrattiTable.vetturaId,
       clienteId: contrattiTable.clienteId,
-      prenotazioneId: contrattiTable.prenotazioneId,
       nomeLibero: contrattiTable.nomeLibero,
       cognomeLibero: contrattiTable.cognomeLibero,
       numero: contrattiTable.numero,
       tipo: contrattiTable.tipo,
       dataContratto: contrattiTable.dataContratto,
+      dataInizio: contrattiTable.dataInizio,
+      dataFine: contrattiTable.dataFine,
+      stato: contrattiTable.stato,
       importo: contrattiTable.importo,
       archiviato: contrattiTable.archiviato,
       note: contrattiTable.note,
